More style tweaks to prevent unexpected horizontal scroll on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,6 +87,16 @@ img.noshadow {
     box-shadow: none !important;
 }
 
+/* No left/right floating images on mobile */
+@include media-query($on-palm) {
+    img.left, img.right {
+        float: none;
+        margin: 0 auto;
+        display: block;
+        box-shadow: 0px 0px 15px black;
+    }
+}
+
 /* Figures */
 figure > img {
     display: block;
