--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -79,7 +79,7 @@ $brand-color-darkmode: lighten($brand-color, 20%);
   }
 
   .site-footer {
-    border-top: 1px solid $grey-color;
+    border-top: 1px solid $grey-color-light;
   }
 
   span.subtitle {
