--- a/_sass/_resets.scss
+++ b/_sass/_resets.scss
@@ -17,3 +17,9 @@ html {
   scroll-behavior: smooth;
   text-rendering: optimizeLegibility;
 }
+
+@media (prefers-reduced-motion) {
+  html {
+    scroll-behavior: auto;
+  }
+}
